# Fantacat

./: Cargo.toml
src/: image.rs  image_utils.rs  main.rs  prompt.rs  stable_diffusion.rs
src/image_utils/: preprocessing.rs  save.rs
src/prompt/: prompt_builder.rs  prompt_entities.rs
src/stable_diffusion/: clip_embeddings.rs  constants.rs  model_files.rs  stable_diffusion_files.rs  unet.rs  vae.rs
